# ratchet

./: .gitignore  Cargo.toml  README.md
examples/: api-optimizer.yaml  autoresearch.yaml
examples/bpe-tokenizer/: .gitignore  README.md  benchmark.py  ratchet.yaml  tokenizer.py  tokenizer_best.py
examples/compression-benchmark/: .gitignore  README.md  benchmark.py  compress_baseline.py  compress_best.py  ratchet.yaml
examples/http-handler/: README.md  benchmark.py  handler.py  ratchet.yaml  results.tsv
examples/knn-benchmark/: README.md  benchmark.py  knn.py  ratchet.yaml  results.tsv
examples/sort-benchmark/: README.md  benchmark.py  ratchet.yaml  results.tsv  sort.py
src/: bandit.rs  config.rs  diff.rs  generate.rs  instruct.rs  loop_cmd.rs  main.rs  plot.rs  results.rs  run.rs
templates/: iterate.md.j2  program.md.j2
