[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"
description = "Generate AI agent instructions for autonomous code optimization loops"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
